--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          </div>
 
             <div class="img">
-               <img src="img/image.png" alt="man">
+               <img src="img/Image.png" alt="man">
             </div>
          
          
